--- a/.hintrc
+++ b/.hintrc
@@ -3,7 +3,12 @@
     "development"
   ],
   "hints": {
-    "button-type": "off",
-    "highest-available-document-mode": "off"
+    "axe/forms": [
+      "default",
+      {
+        "label": "off"
+      }
+    ],
+    "button-type": "off"
   }
 }
