--- a/.hintrc
+++ b/.hintrc
@@ -11,6 +11,14 @@
       }
     ],
     "button-type": "off",
-    "highest-available-document-mode": "off"
+    "highest-available-document-mode": "off",
+    "compat-api/css": [
+      "default",
+      {
+        "ignore": [
+          "backdrop-filter"
+        ]
+      }
+    ]
   }
 }
